--- a/Loginpage/style.css
+++ b/Loginpage/style.css
@@ -1,7 +1,7 @@
 /* style.css */
 /* style.css */
 body {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     background-color: #f0f0f0;
     display: flex;
     justify-content: center;
@@ -55,7 +55,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #2c7c30;
 }
 
 #error-message {
